--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.nav {
+  height: 70px;
+  display: flex;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 0.5rem 3rem;
+}
+
+.nav-logo {
+  max-width: 100px;
+}
+
+.hero {
+  padding: 2rem 25rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-img {
+  /* max-width: 500px; */
+  align-self: center;
+}
+
+.hero-header {
+  margin-top: 2rem;
+}
+
+.hero-text {
+  margin-top: 1rem;
+}
+
+.card-container {
+  padding: 1rem 20rem;
+  margin-top: 2rem;
+}
+
+.card {
+    position: relative;
+}
+
+.status {
+  position: absolute;
+  top: 0.5rem;
+  left: 1rem;
+  background-color: #fff;
+  border-radius: 0.3rem;
+  padding: 0.1rem .5rem;
+  font-weight: 700;
+}
+
+
+
+.star {
+  color: #f00;
+  font-size: 20px;
+}
+
+.text-muted {
+  color: #999;
+  font-weight: 200;
+}
+
+.card-container p {
+  font-weight: 300;
+}
+
+.price {
+  font-weight: 900;
+}
+
+.card-poster {
+  width: 264px;
+  height: 353px;
+  border-radius: 1rem;
 }
